<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <data>
        <variable
            name="loginViewModel"
            type="dev.gafilianog.insorma.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <TextView
            android:id="@+id/tv_brand_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:autofillHints="emailAddress"
            android:text="@={loginViewModel.inputEmail}"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tv_brand_logo" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:text="@={loginViewModel.inputPassword}"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_email_login" />

<!--        Visibility Gone for future implementation-->
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:text="@string/msg_forgot_password"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password_login" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:onClick="@{()->loginViewModel.login()}"
            app:layout_constraintBottom_toTopOf="@id/tv_info_login" />

        <TextView
            android:id="@+id/tv_info_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_don_t_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_move_to_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_move_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/action_register"
            android:onClick="@{()->loginViewModel.moveToRegister()}"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_info_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>